--- a/A2/a2_xsd_ex4.html
+++ b/A2/a2_xsd_ex4.html
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <alumnos
   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:noNamespaceSchemaLocation="alumnos.xsd"
+  xsi:noNamespaceSchemaLocation="a2_xsd_ex4.xsd"
 >
   <alumno>
     <nombre>Pepe</nombre>
