--- a/A2/a2_xsd_ex6.html
+++ b/A2/a2_xsd_ex6.html
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<libro>
+<libro xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="a2_xsd_ex6.xsd">
     <titulo>Genetic Programming</titulo>
     <autor>John Koza</autor>
     <fecha_publicacion>1994-01-01</fecha_publicacion>
