--- a/A2/a2_xsd_ex5.html
+++ b/A2/a2_xsd_ex5.html
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<alumno>
+<alumno xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="a2_xsd_ex5.xsd">
   <nombre>juan</nombre>
   <dni>28542345</dni>
   <direccion>San José 2</direccion>
